Cobbler CHANGELOG

- TBD 2009 - 1.7.0
- Development release start
- (FEAT) network objects
- (FEAT) add two new default flags to yum reposync (-m and -d) for grabbing comps automatically and also deleting duplicate RPMs
- (FEAT) ongoing work contributed to improve Debian and Ubuntu support (import+pkg)
- (FEAT) ability to toggle virt auto-boot on/off
- (BUGF) validate gateway input against python-netaddr
- (FEAT) --kopts="~foo" --in-place can be used to delete a hash entry without affecting the others, not to be confused with "!foo" to supress it.
- (BUGF) fixes to "cobbler report" (not cobbler ___ report)
- (BUGF) debian import changes
- (FEAT) web app moving to Django
- (FEAT) deployment APIs and command (SSH+Func+TBD)
- (FEAT) koan: Support for virt-autoboot feature (Xen only at this point, needs fixing)
- (FEAT) koan: use private address range for random MACs
- (FEAT) yum createrepo flags are now tweakable in settings
- (FEAT) new snippet for RHN Hosted: keep RHN keys between reinstalls
- (FEAT) allow per_distro snippets in addition to per_profile/per_system
- (BUGF) don't add port number to http_server if it's 80.
- (FEAT) replicate is now mtime aware
- (FEAT) support F11 fence-agent paths
- (FEAT) bringing back the koan live CD
- (FEAT) koan live CD can go interactive if no profile is specified and system autodiscovery fails
- (BUGF) koan autodetection now can gather MACs/IPs for bridged interfaces better
- (BUGF) don't use -m option for drac unless power_id is set
- (BUGF) don't run createrepo on reposync'd repos, it is redundant
- (BUGF) fix error message when wrong virt ram value is applied
- (FEAT) koan now partially works in source code form on EL 2

- ... - 1.6.5
- (BUGF) don't use json on python x<=2.3 since we know it's simplejson x<2.0, which has unicode issues
- (FEAT) support F-11 imports
- (BUGF) don't add koan virtual interfaces for vlan tagged interfaces
- (BUGF) pair PAE and non-PAE content in imports better 