@@ -199,4 +199,10 @@ class Repo(item.Item):
     def remote_methods(self):
         return utils.get_remote_methods_from_fields(self,FIELDS)
 
+    def check_if_valid(self):
+        if self.name is None:
+            raise CX("name is required")
+        if self.mirror is None:
+            raise CX("mirror is required")
+
 
